--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.18.0",
+    "rodal": "^2.1.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
