--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "rodal": "^2.1.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
